# LLM-WIKI-MCP

./: ARCHITECTURE.md  CLAUDE.md  CLI_GUIDE.md  CLI_TOOLS_LIST.md  FUNCTION_LIST.md  INSTALL.md  LICENSE  MCP_FUNCTIONS_LIST.md  METHODOLOGY.md  README.md  SKILLS.md  llm_wiki_cli.py  llm_wiki_config.sample.jsonc  llm_wiki_mcp_server.py  pyproject.toml
docs/: 01_OVERVIEW_AND_ARCHITECTURE.md  02_USER_GUIDE.md  03_FUNCTIONS_AND_TOOLS.md  04_AGENTIC_ANSWER_QUALITY.md  04_AGENTIC_ASK_AND_MEMORY.md  05_NOTES_GRAPHS_AND_MAINTENANCE.md  06_REFERENCES_AND_RESEARCH.md  BOOK_SELF_EXTENDING_AGENTIC_SYSTEMS.md  CLI_DEMO_TUTORIAL.md  CONVERSATIONAL_IDENTITY_EXAMPLES.md  EXTENDED_CONVERSATIONAL_ARCHITECTURAL_EXAMPLES.md  FUNCTION_AND_CLI_REFERENCES.md  INDEX.md  PRODUCT_ARCHITECTURE_OVERVIEW.md  RESEARCH_BLOG_ARTICLE_FROM_DEMO.md
docs/books/: README.md  THE_LIVING_LLM_WIKI.md  THE_LIVING_LLM_WIKI_DEVELOPMENT_CHRONICLE.md  THE_SELF_EXTENDING_LLM_WIKI.md  THE_TOOL_THAT_ASKS_ITSELF.md
examples/: demo_commands.sh
tests/: ask_history_context_test.py  cli_and_context_api_test.py  cli_visible_history_test.py  config_comments_and_cli_polish_test.py  config_editing_test.py  context_budget_debug_test.py  fallback_answer_synthesis_test.py  long_document_search_test.py  ollama_and_cli_test.py  pdf_ingest_cli_test.py  progress_and_readline_test.py  provenance_ingest_search_test.py  reindex_docx_vault_skip_test.py  rtf_txt_single_file_ingest_test.py  scan_progress_test.py  screen_width_wrap_test.py  search_cli_test.py  slash_cli_interface_test.py  smoke_test.py
wiki_vault/: .llm_wiki_history
(+6 files in other folders)
